# malaria-climate-modelling

./: .gitignore  MLproject  README.md  isolated_run.py  predict.py  pyproject.toml  train.py
input/: future_data.csv  train_data.csv
