[project]
name = "malaria-climate-kigali"
version = "1.0.0"
description = "Bayesian spatio-temporal malaria & climate modelling for Rwanda — DHIS2 CHAP compatible"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
